tests/output/self_hosted/unnecessary_as_error.txt
tests/unnecessary_as_error.oomph:2: error: unnecessary 'as' conversion from Str to Str

    print("Hello" as Str)
                  ^^

